Trying to fix vertical height issue on iOS

--- a/index.css
+++ b/index.css
@@ -1,12 +1,14 @@
 .card1 {
 	position: relative;
 	display: table;
-	width: calc(100% - 80px);
-	height: calc(100vh - 60px);
+	width: 100%;
+	height: 100vh;
+	height: -webkit-fill-available;
 	padding: 30px 40px;
 	text-align: center;
 	background: url("/images/petals.jpg") no-repeat center center;
 	background-size: cover;
+	box-sizing: border-box;
 }
 
 .container {
