--- a/registry/index.css
+++ b/registry/index.css
@@ -1,11 +1,13 @@
 .card1 {
 	display: table;
-	width: calc(100% - 80px);
-	height: calc(100vh - 60px);
+	width: 100%;
+	height: 100vh;
+	height: -webkit-fill-available;
 	padding: 30px 40px;
 	text-align: center;
 	background: url("/images/petals2.jpg") no-repeat bottom center;
 	background-size: cover;
+	box-sizing: border-box;
 }
 
 .container {
